tests/input/semantic_errors/pointerOperationError.c
#include <ssdfsdfdf.h> // NOT YET POSSIBLE TO KNOW IF SOMETHING IS PTR/ARRAY
int main(){
        int c = 5;
        int* a = &c;
        int* b = &c;
        a + b;
        return 1;
}


